collapsed modal overlap fix 2

--- a/frontend/less/espo/custom.less
+++ b/frontend/less/espo/custom.less
@@ -3462,8 +3462,14 @@ a.close {
     border: var(--scroll-border-width) solid var(--scroll-bg);
 }
 
+body:has(.modal-backdrop) {
+    .collapsed-modal-bar {
+        // Otherwise, it will be overlapped.
+        z-index: 2000;
+    }
+}
+
 .collapsed-modal-bar {
-    z-index: 2000;
     position: fixed;
     bottom: 0;
     display: grid;
